# ED

./: .gitignore  CMakeLists.txt  TG.c  TLSE.c  TLSE.h  main.c  teste_TABB.c  teste_TG.c
Revisao_p1_ed/: CMakeLists.txt  Q3.c  Q4.c  Q5.c  TABB.c
bibliotecas/TAB/: TAB.c
bibliotecas/TG/: teste_TG.c
bibliotecas/arvore-b/: TARVB.c  TARVB.h  teste_TARVB.c
bibliotecas/heap/: heap.c
bibliotecas/tabela_hash/: teste_TH.c
rev_p2_ed/: Q2.c  Q3.c  Q3teste2.c  Q4verdade.c  TH.c
